--- a/src/pages/jury.html
+++ b/src/pages/jury.html
@@ -21,6 +21,7 @@
         <p><img src="../images/logo.png" alt=""></p>
         <img id="closem" class="" src="../images/icons/closeNav.svg" alt="">
         <ul class="navigation">
+            <li class="nav-item languageindic" ><a key="indic">fr</a></li>
             <li class="nav-item"><a key="1" href="/index.html">Accueil</a></li>
             <li class="nav-item"><a key="2" href="./presentation.html">Présentation</a></li>
             <li class="nav-item"><a key="3" href="./reglement.html">Réglement du concours</a></li>
@@ -32,9 +33,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="../images/logo.png" alt=""></a>
             <ul class="row">
-                <li class="text-white mx-1" onclick="setLanguage('fr')">FR</li>
-                <li class="text-white mx-1">/</li>
-                <li class="text-white mx-1" onclick="setLanguage('ar')">AR</li>
+                <li class="text-white mx-1" id="fr">FR</li>
             </ul>
             <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent">
                 <img src="../images/icons/openNav.svg" alt="" id="openm">
@@ -107,7 +106,7 @@
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/gamal.png" alt="">
                                 <p class=""> <span class="vert">M. Yassine Gamal</span> <br> </p> <ul> <li>• Membre du mouvement OTED, initiative dédiée au développement et l'innovation territoriale</li> <li>• Expert international en Developpement de Marché et en Management de l'innovation</li> </ul>
                             </div>
-                            <div dir="auto" class="col-md-3 mb-5 text-center">
+                            <div dir="auto"  key="j14" class="col-md-3 mb-5 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/rabha.png" alt="">
                                 <p class=""> <span class="vert">Mme. RABHA ZAHID</span> <br> </p> <ul> <li>• Chef de la Division culture au sein du Conseil de la ville de Casablanca </li> <li>• Ex Inspectrice régionale des Monuments historiques et sites de Casablanca.</li> </ul>
                             </div>
