--- a/src/pages/reglement.html
+++ b/src/pages/reglement.html
@@ -22,6 +22,7 @@
         <p><img src="../images/logo.png" alt=""></p>
         <img id="closem" class="" src="../images/icons/closeNav.svg" alt="">
         <ul class="navigation">
+            <li class="nav-item languageindic" ><a key="indic">fr</a></li>
             <li class="nav-item"><a key="1" href="/index.html">Accueil</a></li>
             <li class="nav-item"><a key="2" href="./presentation.html">Présentation</a></li>
             <li class="nav-item"><a key="3" href="./reglement.html" class="menu-selected">Réglement du concours</a></li>
@@ -33,9 +34,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="../images/logo.png" alt=""></a>
             <ul class="row">
-                <li class="text-white mx-1" onclick="setLanguage('fr')">FR</li>
-                <li class="text-white mx-1">/</li>
-                <li class="text-white mx-1" onclick="setLanguage('ar')">AR</li>
+                <li class="text-white mx-1" id="fr">FR</li>
             </ul>
             <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent">
                 <img src="../images/icons/openNav.svg" alt="" id="openm">
