--- a/src/pages/jury.html
+++ b/src/pages/jury.html
@@ -59,14 +59,22 @@
                             </div> 
                             <div class="col-md-7">
                                 <div class="row">
-                                    <div class="col-md-4" key="com-1">
-                                        <img src="../images/com-1.svg" width="100%" alt="">
+                                    <div class="col-md-4 jury-members" >
+                                        <div dir="auto" key="j2"  style="max-width: 100%;" class="col-md-3 mb-5 text-center">
+                                            <img class="mb-3 rounded-circle" width="120px" src="../images/comite/karim.png" alt=""> <p class=""> <span class="vert">Dr. KARIM ADYEL</span> <br> </p> <ul><li>• Avocat</li><li>• Docteur d'Etat en Droit international</li><li>• Arbitre au Tribunal Arbitral du Sport (TAS)</li></ul> 
+                                        </div>
                                     </div>
-                                    <div class="col-md-4" key="com-2">
-                                        <img src="../images/com-2.svg" width="100%" alt="">
+                                    <div class="col-md-4 jury-members" >
+                                        <div dir="auto" key="j13"  style="max-width: 100%;" class="col-md-3 mb-5 text-center">
+                                            <img class="mb-3 rounded-circle" width="120px" src="../images/comite/gamal.png" alt="">
+                                            <p class=""> <span class="vert">M. Yassine Gamal</span> <br> </p> <ul> <li>• Membre du mouvement OTED, initiative dédiée au développement et l'innovation territoriale</li> <li>• Expert international en Developpement de Marché et en Management de l'innovation</li> </ul>
+                                        </div>
                                     </div>
-                                    <div class="col-md-4" key="com-3">
-                                        <img src="../images/com-3.svg" width="100%" alt="">
+                                    <div class="col-md-4 comite">      
+                                        <div dir="auto"  key="com-3" style="max-width: 100%;" class="col-md-3 mb-5 text-center">
+                                            <img class="mb-3 rounded-circle" width="120px" src="../images/comite/rabha.png" alt="">
+                                            <p class=""> <span class="vert">Mme. RABHA ZAHID</span> <br> </p> <ul> <li>• Chef de la Division culture au sein du Conseil de la ville de Casablanca </li> <li>• Ex Inspectrice régionale des Monuments historiques et sites de Casablanca.</li> </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -102,7 +110,7 @@
                             <div dir="auto" key="j6" class="col-md-3 mb-5 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/nezha.png" alt=""> <p class=""> <span class="vert">Mme. NEZHA BELKADY</span> <br> </p> <ul> <li>• Entrepreneur Culturelle</li></ul>
                             </div>
-                            <div dir="auto" class="col-md-3 mb-5 text-center">
+                            <div dir="auto" key="j13" class="col-md-3 mb-5 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/gamal.png" alt="">
                                 <p class=""> <span class="vert">M. Yassine Gamal</span> <br> </p> <ul> <li>• Membre du mouvement OTED, initiative dédiée au développement et l'innovation territoriale</li> <li>• Expert international en Developpement de Marché et en Management de l'innovation</li> </ul>
                             </div>
