--- a/src/pages/reglement.html
+++ b/src/pages/reglement.html
@@ -51,7 +51,7 @@
                             <p dir="auto" key="desc">Vous êtes créatif, designer, peintre, musiciens, entrepreneur ou même simple citoyen avec
                                 pleines d’idées en tête, partagez avec nous vos projets de développement de Patrimoine
                                 part la créativité et gagnez...<br><br>
-                                <strong>Avant de poster vos idées, veuillez lire et télécharger notre <a href="../images/reglement-et-charte-initiative-Ath'Art.pdf" download style="font-size: 20px; color: #26A7A1;">règlement du concours</a>
+                                <strong>Avant de poster vos idées, veuillez lire et télécharger notre <a href="../downloadable/reglement_athart.docx" download style="font-size: 20px; color: #26A7A1;">règlement du concours</a>
                                 </strong>
                             </p>
                         </div>
